basic frontend scapeholding
Signed-off-by: Jagjeevan Kashid <jagjeevandev97@gmail.com>

--- a/web/app/globals.css
+++ b/web/app/globals.css
@@ -1,4 +1,5 @@
 @import "tailwindcss";
+@import "tw-animate-css";
 
 @custom-variant dark (&:is(.dark *));
 
@@ -184,5 +185,14 @@
 @layer base {
   body {
     letter-spacing: var(--tracking-normal);
+  }
+}
+
+@layer base {
+  * {
+    @apply border-border outline-ring/50;
+  }
+  body {
+    @apply bg-background text-foreground;
   }
 }
